--- a/2JavaScript/project/rock paper scissor/style.css
+++ b/2JavaScript/project/rock paper scissor/style.css
@@ -6,6 +6,14 @@
     border-radius: 5px;
     font-size: 15px;
   }
+  .reset-button{
+    padding: 8px 15px;
+    background-color: hsl(0, 91%, 50%);
+    color: white;
+    border: 2px solid black;
+    border-radius: 5px;
+    font-size: 15px;
+  }
   
   .choice-button:hover {
     background-color: #45a049;
