--- a/7-using-bootstrap/src/index.css
+++ b/7-using-bootstrap/src/index.css
@@ -1,3 +1,13 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.green{
+  color: green;
+}
+
 .my-text{
   color: rgb(255, 0, 0);
 }
