--- a/5 NodeJs and ExpressJs/12 mongodb/views/host/host-homes.ejs
+++ b/5 NodeJs and ExpressJs/12 mongodb/views/host/host-homes.ejs
@@ -34,7 +34,7 @@
                     class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 transition-colors">
                       Edit
                     </a>
-                    <form action="/home/delete-home/<%= home._id %>" method="post">
+                    <form action="/host/delete-home/<%= home._id %>" method="post">
                       <button 
                       class="bg-red-500 text-white px-4 py-2 rounded-lg hover:bg-red-600 transition-colors"
                       type="submit">
